# yipyap

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  yipyap.py
evals/: filter_evals.py  tldr_evals.py
