[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yipyap"
version = "0.1.0"
description = "AI Tech News MCP Server with LLM-powered article summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "groq>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["yipyap"]
